--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the calendar controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+	background-color: white;
+	color: black;
+	font-family: 'Lato', sans-serif;
+}
+
+
+.table td {
+	padding: 0px;
+	height: 40px;
+}
+
+h1, h4 {
+	margin-left: 30px;
+}
+
+button {
+	width: 100%;
+	height: 40px;
+	background-color: white;
+	border: none;
+	font-family: 'Lato', sans-serif;
+	font-size: 18px;
+}
+
+
+button:hover {
+	background-color: #C6E070;
+}
