--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,28 @@
 <html>
 <head>
   <title>Funkycalendar</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.1.1.min.js"></script>
   <%= javascript_include_tag "application" %>
+
   <%= csrf_meta_tags %>
+  <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+
 </head>
 <body>
-
-<%= yield %>
+	<div class="container">
+			<h1>Funky Calendar</h1>
+			<h4>Wondering what wacky day it is today?</h4>
+			Today is <span id="currentdate"><%= Date.current.to_formatted_s(:long) %></span>
+		<%= yield %>
+	</div>
 
 </body>
+<footer>
+	<div class="container" style="margin-top: 15px; font-size: 10px;">
+		Created by: steven
+	</div>
+</footer>
 </html>
