--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,66 +1,16 @@
-<div style="text-align: left; clear: both;">
-				<img src="/assets/pirate.svg" width="150" class="img img-circle pull-left" style="margin-right: 20px; margin-top: -20px;">
-				<h3>It's National Pirate Day!</h3>
+<div class="setdate"><% date = Date.current %></div>
+
+<div style="text-align: center; clear: both;">
+	<% @events.each do |event| %>
+		<% if event.eventdate === date %>
+		<div class="span6 offset3">
+			<img src="/assets/pirate.svg" width="150" class="img pull-left" style="margin-right: 20px; margin-top: -20px; display: inline;">
+			<h3 style="display: inline;">It's <%= event.title %>!</h3>
+		</div>
+			<% end %>
+	<% end %>	
 </div>
 
-<div class="setdate"><% date = Date.current %></div>
-<% @events.each do |event| %>
-	<% if event.eventdate === date %>
-		<%= event.title %><br>
-		<% end %>
-<% end %>
-
-<div class="span12" style="margin-top: 10px;">
-	<table class="table table-bordered" style="font-size: 20px;">
-		<thead>	
-			<td colspan="7" style="background-color: white;"><h3>January</h3></td>
-		</thead>
-		<tr>
-			<td><button class="" type="submit" id="dateChange" value="01-01-2013">1</button></td>
-			<td><button class="" type="submit" id="dateChange" value="02-01-2013">2</button></td>
-			<td style="background-color: #91C46C;">3</td>
-			<td>4</td>
-			<td>5</td>
-			<td>6</td>
-			<td>7</td>
-		</tr>
-		<tr>
-			<td>8</td>
-			<td>9</td>
-			<td>10</td>
-			<td>11</td>
-			<td>12</td>
-			<td>13</td>
-			<td>14</td>
-		</tr>
-		<tr>
-			<td>15</td>
-			<td>16</td>
-			<td>17</td>
-			<td>18</td>
-			<td>19</td>
-			<td>20</td>
-			<td>21</td>
-		</tr>
-		<tr>
-			<td>22</td>
-			<td>23</td>
-			<td>24</td>
-			<td>25</td>
-			<td>26</td>
-			<td>27</td>
-			<td>28</td>
-		</tr>
-		<tr>
-			<td>29</td>
-			<td>30</td>
-			<td>31</td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-	</table>
-	<a class="pull-left">December</a>
-	<a class="pull-right">February</a>
+<div id="calendar">
+  <%= render "layouts/calendar" %>
 </div>
