--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,14 +1,5 @@
-<div class="setdate"><% date = Date.current %></div>
-
-<div style="text-align: center; clear: both;">
-	<% @events.each do |event| %>
-		<% if event.eventdate === date %>
-		<div class="span6 offset3">
-			<img src="/assets/pirate.svg" width="150" class="img pull-left" style="margin-right: 20px; margin-top: -20px; display: inline;">
-			<h3 style="display: inline;">It's <%= event.title %>!</h3>
-		</div>
-			<% end %>
-	<% end %>	
+<div style="text-align: center; clear: both;" id="today">
+	<%= render 'layouts/today' %>
 </div>
 
 <div id="calendar">
