--- a/app/views/layouts/_today.html.erb
+++ b/app/views/layouts/_today.html.erb
@@ -1,9 +1,9 @@
-<% date = Date.current %>
+<% date = Time.now.to_date %>
 <% @events.each do |event| %>
 	<% if event.eventdate === date %>
-	<div class="span6 offset3">
-		<img src="/assets/pirate.svg" width="150" class="img pull-left" style="margin-right: 20px; margin-top: -20px; display: inline;">
-		<h3 style="display: inline;">It's <%= event.title %>!</h3>
+	<div class="span4 offset4 todayEvent">
+		<img src="/assets/pirate.svg" width="100" class="img pull-left" style="margin-right: 10px; margin-top: -20px; display: inline; margin-bottom: 20px;">
+		<h4 style="display: inline;">It's <%= event.title %>!</h4>
 	</div>
 		<% end %>
 <% end %>
