--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,20 @@
 
 </head>
 <body>
+	<div class="header">
+		<h1><%= link_to "Funky Calendar" , '/' %></h1>
+	</div>
 	<div class="container">
-			<h1><%= link_to "Funky Calendar" , '/' %></h1>
-			<h4>Wondering what wacky day it is today?</h4>
+			
+			<h3>Wondering what wacky day it is today?</h3>
 			Today is <span id="currentdate"><%= Date.current.to_formatted_s(:long) %></span><br><br>
 		<%= yield %>
 	</div>
 
 </body>
 <footer>
-	<div class="container" style="margin-top: 15px; font-size: 10px;">
-		Created by: steven
+	<div class="container" style="margin-top: 15px; font-size: 14px; margin-bottom: 20px;">
+		A Project By: <a href="http://staticsteven.com">staticsteven</a>
 	</div>
 </footer>
 </html>
