--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Funkycalendar</title>
+  <title>Funky Calendar - Find Out Today's Wacky Holiday</title>
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="http://code.jquery.com/jquery-migrate-1.1.1.min.js"></script>
   <%= javascript_include_tag "application" %>
@@ -14,12 +14,9 @@
 </head>
 <body>
 	<div class="header">
-		<h1><%= link_to "Funky Calendar" , '/' %></h1>
+		<h1><%= link_to "Wondering what wacky day it is today?" , '/' %></h1>
 	</div>
 	<div class="container">
-			
-			<h3>Wondering what wacky day it is today?</h3>
-
 		<%= yield %>
 	</div>
 
