--- a/app/views/calendar/index.js.erb
+++ b/app/views/calendar/index.js.erb
@@ -1,1 +1,2 @@
 $("#calendar").html("<%= escape_javascript(render('layouts/calendar')) %>");
+$("#today").html("<%= escape_javascript(render('layouts/today')) %>");
