--- a/app/views/layouts/_today.html.erb
+++ b/app/views/layouts/_today.html.erb
@@ -1,17 +1,17 @@
-<% date = Time.now.to_date %>
 <div class="row" style="">
 	<div class="span3 offset2 dateToday">
 		<span id="currentdate">
-			<%= h date.strftime("%B") %><br>
-			<span id="dayDate"><%= h date.day %></span>
+			<%= h @eventDate.strftime("%B") %><br>
+			<span id="dayDate"><%= h @eventDate.day %></span>
 		</span>
+		<br><%= link_to "tomorrow", :day => @eventDate.tomorrow, :remote => true %>
 	</div>
 	<div class="span5 todayEvent">
 		<% @events.each do |event| %>
-		<% if event.eventdate === date %>
+		<% if event.eventdate === @eventDate %>
 			
 				<% if event.image %>
-					<%= image_tag("/assets/#{event.image}", :width => '250px', :class => "img pull-left svg") %>
+					<%= image_tag("/assets/#{event.image}", :height => '150px', :class => "img pull-left svg") %>
 				<% else %>
 					<%= image_tag("http://placehold.it/100x100", :class => "img img-circle pull-left") %>
 				<% end %>
