--- a/app/views/layouts/_calendar.html.erb
+++ b/app/views/layouts/_calendar.html.erb
@@ -1,16 +1,13 @@
-<h2 id="month">
-    <span class="pull-left"><%= link_to "<", :month => (@date.beginning_of_month-1).strftime("%Y-%m-01") %></span>
-    <%= h @date.strftime("%B %Y") %>
-    <span class="pull-right"><%= link_to ">", :month => (@date.end_of_month+1).strftime("%Y-%m-01") %></span>
-</h2>
+<div class="span5 offset3">
+  <h2 id="month">
+      <span class="pull-left"><%= link_to "<", :month => (@date.beginning_of_month-1).strftime("%Y-%m-01") %></span>
+      <%= h @date.strftime("%B %Y") %>
+      <span class="pull-right"><%= link_to ">", :month => (@date.end_of_month+1).strftime("%Y-%m-01") %></span>
+  </h2>
   <%= calendar_for(@events, :year => @date.year, :month => @date.month) do |t| %>
-  <%= t.head('Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun') %>
-  <%= t.day(:day_method => :eventdate) do |date, events| %>
-    <span class="day"><%= date.day %></span>
-    <ul>
-    <% events.each do |event| %>
-      <li><%= h(event.title) %></li>
+    <%= t.head('Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun') %>
+    <%= t.day(:day_method => :eventdate) do |date, events| %>
+      <span class="day"><%= link_to date.day, :day => date, :remote => true %></span>
     <% end %>
-	</ul>
   <% end %>
-<% end %>
+</div>
