--- a/app/views/layouts/_calendar.html.erb
+++ b/app/views/layouts/_calendar.html.erb
@@ -1,6 +1,6 @@
 <div class="span5 offset3">
   <h2 id="month">
-      <span class="pull-left"><%= link_to "<", :month => (@date.beginning_of_month-1), :action => "update_calendar", :remote => true %></span>
+      <span class="pull-left"><%= link_to "<", :month => (@date.beginning_of_month-1), :remote => true %></span>
       <%= h @date.strftime("%B %Y") %>
       <span class="pull-right"><%= link_to ">", :month => (@date.end_of_month+1).strftime("%Y-%m-01") %></span>
   </h2>
