--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,21 @@
 <head>
   <title>Funky Calendar - Find Out Today's Wacky Holiday</title>
   <%= javascript_include_tag "application" %>
-
   <%= csrf_meta_tags %>
   <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag "application", :media => "all" %>
+  <link rel="stylesheet" href="assets/hook.css" type="text/css" />
+  <script src="assets/hook.js" type="text/javascript"></script>
 
 </head>
 <body>
+  <div id="hook">
+  <div id="loader">
+    <div class="spinner"></div>
+  </div>
+  <span id="hook-text">Getting Random Date...</span>
+</div>
 	<div class="header">
 		<h1>Wondering what wacky day it is today?</h1>
 	</div>
