--- a/app/views/calendars/index.js.erb
+++ b/app/views/calendars/index.js.erb
@@ -1,5 +1,8 @@
 if (dater == "month") {
 	$("#calendar").html("<%= escape_javascript(render('layouts/calendar')) %>");
+} else if (dater == "day") {
+	$("#today").html("<%= escape_javascript(render('layouts/today')) %>");
 } else {
 	$("#today").html("<%= escape_javascript(render('layouts/today')) %>");
+	$("#randomness").html("<%= escape_javascript(render('layouts/random')) %>");
 }
