--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,8 +1,14 @@
 <div style="" id="today">
 	<%= render 'layouts/today' %>
 </div>
-
-<div id="calendar">
-	<%= render "layouts/calendar" %>
+<div class="row">
+	<div class="span3 offset2" id="randomness">
+		<%= render "layouts/random" %>
+	</div>
+	<div class="span5">
+	<div id="calendar">
+		<%= render "layouts/calendar" %>
+	</div>
+	</div>
 </div>
 
