added month change buttons

--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -264,6 +264,13 @@ img {
 	color: white;
 }
 
+#month a {
+	color: black;
+}
+
+#month a:hover {
+	text-decoration: none;
+}
 
 .randomButton a:hover {
 	color: white;
