--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,7 +1,7 @@
-<div style="" id="today">
+<div id="today">
 	<%= render 'layouts/today' %>
 </div>
-<div class="span5 offset3" id="randomness">
+<div id="randomness">
 	<%= render "layouts/random" %>
 </div>
 <div id="calendar">
