--- a/app/views/layouts/_calendar.html.erb
+++ b/app/views/layouts/_calendar.html.erb
@@ -1,13 +1,15 @@
+<div class="small-12 large-7 columns small-centered">
 <div class="calendarBox">
   <h2 id="month">
-       <span class="pull-left"><%= link_to "<", :month => (@date.beginning_of_month-1), :remote => true %></span>
+       <span style="float: left;"><%= link_to "<", :month => (@date.beginning_of_month-1), :remote => true %></span>
       <%= h @date.strftime("%B %Y") %>
-      <span class="pull-right"><%= link_to ">", :month => (@date.end_of_month+1).strftime("%Y-%m-01") %></span>
+      <span style="float: right;"><%= link_to ">", :month => (@date.end_of_month+1).strftime("%Y-%m-01") %></span>
   </h2>
   <%= calendar_for(@events, :year => @date.year, :month => @date.month) do |t| %>
     <%= t.head('Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun') %>
     <%= t.day(:day_method => :eventdate) do |date, events| %>
-      <div class="day"><%= link_to(date.day,  {:day => date }, :remote => true, :class => "btn dayBtn") %></div>
+      <div class="day"><%= link_to(date.day,  {:day => date }, :remote => true, :class => "button dayBtn") %></div>
     <% end %>
   <% end %>
+</div>
 </div>
