--- a/app/views/calendars/index.js.erb
+++ b/app/views/calendars/index.js.erb
@@ -2,7 +2,7 @@ if (dater == "month") {
 	$("#calendar").html("<%= escape_javascript(render('layouts/calendar')) %>");
 } else if (dater == "day") {
 	$("#today").html("<%= escape_javascript(render('layouts/today')) %>");
-} else {
+} else if (dater == "random") {
 	$("#today").html("<%= escape_javascript(render('layouts/today')) %>");
 	$("#randomness").html("<%= escape_javascript(render('layouts/random')) %>");
 }
